--- a/style.css
+++ b/style.css
@@ -951,7 +951,8 @@ h6 {
   right: 0;
 }
 
-.section-title {
+/* Changed to be more specific to avoid conflicts */
+.product-difference-header .section-title {
   font-size: 3.5rem;
   font-weight: 700;
   color: var(--primary-color);
@@ -959,7 +960,7 @@ h6 {
   text-transform: uppercase;
 }
 
-.section-subtitle {
+.product-difference-header .section-subtitle {
   font-size: 3.5rem;
   font-weight: 700;
   color: var(--secondary-color);
